@startuml
'================== HECHOS ==================
class Hecho {
    - idHecho: Long
    - titulo: String
    - descripcion: String
    - categoria: Categoria
    - ubicacion: Ubicacion
    - fechaDeAcontecimiento: DateTime
    - fechaDeCarga: DateTime
    - contenidoMultimedia: List<ContenidoMultimedia>
}

class Ubicacion {
    - latitud: Double
    - longitud: Double
    - pais : String
    - ciudad : String
    - provincia : String
}

class Categoria {
    - idCategoria: Long
    - nombre: String
}


class ContenidoMultimedia {
    - id : Long
    -url: String
    -formato: String
    - tamano: Long
}

interface INormalizadorAdapter{
    + obtenerHechoNormalizado(HechoOutputDTONormalizador) : Mono<Hecho>
}

class NormalizadorAdapter {
    - webClient : WebClient
    - timeOutMS : Integer
    + obtenerHechoNormalizado(HechoOutputDTONormalizador) : Mono<Hecho>
}

'================== RELACIONES ==================
Hecho --> Ubicacion
Hecho --> Categoria
Hecho --> ContenidoMultimedia
NormalizadorAdapter ..|> INormalizadorAdapter
INormalizadorAdapter --> Hecho

@enduml